Update html (Booking)
frame(html) booking page + css…

--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@
                             <a href="#">Về chúng tôi</a>
                           </li>
                           <li class="on-top-nav">
-                            <a href="#">Tiếng Việt</a>
+                            <div class="dropdown show">
+                              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Tiếng Việt<i class="fa fa-caret-down" aria-hidden="true"></i>
+                              </a>
+
+                              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item" href="#">English</a>                                
+                              </div>
+                            </div>
+
                           </li>
                         </ul>
                       </div>
@@ -133,22 +142,22 @@
                                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                         <ul class="nav navbar-nav navbar-custom">
                                             <li>
-                                                <a href="house-type.html">House Types
+                                                <a href="#">House Types
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="about.html">About us
+                                                <a href="#">About us
                                                 </a>
                                             </li>
 
                                             <li>
-                                              <a href="inspi.html">Inspiration</a>
+                                              <a href="#">Inspiration</a>
                                             </li>
                                             <li>
-                                              <a href="go-green.html">Go Green</a>
+                                              <a href="#">Go Green</a>
                                             </li>
                                             <li>
-                                              <a href="dealer.html">Dealers</a>
+                                              <a href="#">Dealers</a>
                                             </li>
                                         </ul>
                                     </div>
