update page room
html and css upate. Add img

--- a/Booking.html
+++ b/Booking.html
@@ -99,27 +99,27 @@
                                         <a href="#">Phòng nghỉ
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Ẩm thực
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Tiện nghi
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Hội nghị
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Khuyến mại
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Địa điểm
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Hình ảnh
 </a>
                                     </li>
