--- a/Event-rooms.html
+++ b/Event-rooms.html
@@ -95,15 +95,15 @@
                                       <a href="#">Trang chủ</a>
                                   </li>
 
-                                    <li class="active main-nav">
+                                    <li class=" main-nav">
                                         <a href="#">Phòng nghỉ
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Ẩm thực
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Tiện nghi
 </a>
                                     </li>
@@ -111,15 +111,15 @@
                                         <a href="#">Hội nghị
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Khuyến mại
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Địa điểm
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class="main-nav">
                                         <a href="#">Hình ảnh
 </a>
                                     </li>
