--- a/Select-rooms.html
+++ b/Select-rooms.html
@@ -89,43 +89,47 @@
                         </div>
                         <div class="col-lg-11 col-md-11 col-sm-11 col-xs-12 nav-home">
 
-                            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12 navigation-home">
-                                <ul>
-                                  <li class="main-nav">
-                                      <a href="#">Trang chủ</a>
+                          <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12 navigation-home">
+                              <ul>
+                                <li class="main-nav">
+                                    <a href="#">Trang chủ</a>
+                                </li>
+
+                                  <li class=" main-nav">
+                                      <a href="#">Phòng nghỉ
+</a>
                                   </li>
+                                  <li class="main-nav">
+                                      <a href="#">Ẩm thực
+</a>
+                                  </li>
+                                  <li class="main-nav">
+                                      <a href="#">Tiện nghi
+</a>
+                                  </li>
+                                  <li class="main-nav">
+                                      <a href="#">Hội nghị
+</a>
+                                  </li>
+                                  <li class="main-nav">
+                                      <a href="#">Khuyến mại
+</a>
+                                  </li>
+                                  <li class="main-nav">
+                                      <a href="#">Địa điểm
+</a>
+                                  </li>
+                                  <li class="main-nav">
+                                      <a href="#">Hình ảnh
+</a>
+                                  </li>
+                                  <li class="booking float-left">
+                                      <a href="#">Đặt phòng
+</a>
+                                  </li>
+                              </ul>
 
-                                    <li class="active main-nav">
-                                        <a href="#">Phòng nghỉ
-</a>
-                                    </li>
-                                    <li class="active main-nav">
-                                        <a href="#">Ẩm thực
-</a>
-                                    </li>
-                                    <li class="active main-nav">
-                                        <a href="#">Tiện nghi
-</a>
-                                    </li>
-                                    <li class="active main-nav">
-                                        <a href="#">Hội nghị
-</a>
-                                    </li>
-                                    <li class="active main-nav">
-                                        <a href="#">Khuyến mại
-</a>
-                                    </li>
-                                    <li class="active main-nav">
-                                        <a href="#">Địa điểm
-</a>
-                                    </li>
-                                    <li class="active main-nav">
-                                        <a href="#">Hình ảnh
-</a>
-                                    </li>
-                                </ul>
-
-                            </div>
+                          </div>
                         </div>
 
                         </div>
