--- a/Select-rooms.html
+++ b/Select-rooms.html
@@ -607,6 +607,18 @@
             Emaii: support@haianhotel.com.vn <br />
               Tel. (+84-28) 3823 9269 <br />
           </p>
+          <ul>
+            <li>
+              <a href="#">
+                <img src="https://www.nikos-papas.nl/images/Social_icon/tripadvisor-icon.png" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8c/Facebook_Home_logo_old.svg/1024px-Facebook_Home_logo_old.svg.png" />
+              </a>
+            </li>
+          </ul>
         </div>
         <div class="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.1574235911858!2d105.84536565018267!3d21.02638619316726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab94163e3037%3A0xfb1f3e37fc5e76d5!2zVHJp4buHdSBRdeG7kWMgxJDhuqF0LCBUcuG6p24gSMawbmcgxJDhuqFvLCBIb8OgbiBLaeG6v20sIEjDoCBO4buZaSwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1514309662076" width="994" height="330" frameborder="0" style="border:0" allowfullscreen></iframe>
