--- a/Khuyen-mai.html
+++ b/Khuyen-mai.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="assets/lib/bootstrap/css/bootstrap.min.css">
     <script src="assets/lib/bootstrap/js/bootstrap.min.js"></script>
 
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="assets/lib/fancybox/jquery.fancybox.min.css">
+    <script src="assets/lib/fancybox/jquery.fancybox.min.js"></script>
+
     <!-- bxSlider Javascript file -->
     <script src="assets/lib/jquery.bxslider/jquery.bxslider.min.js"></script>
     <script>
@@ -91,7 +95,7 @@
 
                             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12 navigation-home">
                                 <ul>
-                                  <li class="main-nav">
+                                  <li class=" main-nav">
                                       <a href="#">Trang chủ</a>
                                   </li>
 
@@ -99,31 +103,31 @@
                                         <a href="#">Phòng nghỉ
 </a>
                                     </li>
-                                    <li class="main-nav">
+                                    <li class=" main-nav">
                                         <a href="#">Ẩm thực
 </a>
                                     </li>
-                                    <li class="main-nav">
+                                    <li class=" main-nav">
                                         <a href="#">Tiện nghi
 </a>
                                     </li>
-                                    <li class="active main-nav">
+                                    <li class=" main-nav">
                                         <a href="#">Hội nghị
 </a>
                                     </li>
-                                    <li class="main-nav">
+                                    <li class=" main-nav">
                                         <a href="#">Khuyến mại
 </a>
                                     </li>
-                                    <li class="main-nav">
+                                    <li class=" main-nav">
                                         <a href="#">Địa điểm
 </a>
                                     </li>
-                                    <li class="main-nav">
+                                    <li class="active main-nav">
                                         <a href="#">Hình ảnh
 </a>
                                     </li>
-                                    <li class="booking float-left">
+                                    <li class=" main-nav">
                                         <a href="#">Đặt phòng
 </a>
                                     </li>
@@ -185,10 +189,10 @@
 
   <!-- Slide open-->
     <section class="slide ">
-      <div class="in-event-rooms cover-event-rooms">
+      <div class="in-album cover-album">
         <div class="container">
           <div class="cover-top">
-            <h3>Hội nghị</h3>
+            <h3>Hình ảnh</h3>
             <p>
               Khách sạn Hai An Hotel cung cấp một địa điểm lý tưởng cho các hội nghị, sự kiện hoặc các buổi tiệc gia đình. Bất kể sự kiện hoặc hội nghị nào, đội ngũ chuyên nghiệp của chúng tôi luôn nhiệt tình mang đến sự thành công đến sự kiện của khách hàng.
             </p>
@@ -203,7 +207,7 @@
             <a href="#">Trang chủ <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </li>
           <li>
-            <a href="#">Hội nghị</a>
+            <a href="#">Khuyến mãi</a>
           </li>
         </ul>
       </div>
@@ -213,48 +217,124 @@
 <!-- Slide close-->
 
 <!-- Intro open-->
-<section class="content-eventrooms">
+<section class="content-album">
   <div class="container">
-    <div class="in-content-eventrooms">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 eventrooms-in">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 left">
-            <span class="label-eventroom">Phòng hội nghị</span>
-            <h3 class="title-eventroom">
-              beta tầng lửng
-            </h3>
-            <p class="text-eventroom">
-              Nằm trên tầng lửng, phòng Beta được thiết kế âm tường với đường truyền Internet tốc độ cao và hệ thống âm thanh cao cấp. Quý khách được chào đón bằng không gian ấm cúng & sang trọng tại hội thảo, buổi đào tạo hoặc để kỷ niệm
-các dịp lễ đặc biệt.
-
-            </p>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right">
-          <a href="#" class="link-img">
-            <img src="assets/images/img-eventroom1.jpg" />
-          </a>
-
-        </div>
+    <div class="in-content-album">
+      <div class="tab-album col-lg-12 col-md-12 col-xs-12 col-sm-12">
+        <ul>
+          <li>
+            <a class="active" href="#">Tất cả</a>
+          </li>
+          <li>
+            <a href="#">Phòng</a>
+          </li>
+          <li>
+            <a href="#">Nhà hàng</a>
+          </li>
+          <li>
+            <a href="#">Tiện nghi</a>
+          </li>
+        </ul>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 eventrooms-in">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right">
-          <a href="#" class="link-img">
-            <img src="assets/images/img-eventroom2.jpg" />
-          </a>
-
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 left">
-            <span class="label-eventroom">Phòng hội nghị</span>
-            <h3 class="title-eventroom">
-              beta tầng lửng
-            </h3>
-            <p class="text-eventroom">
-              Nằm trên tầng lửng, phòng Beta được thiết kế âm tường với đường truyền Internet tốc độ cao và hệ thống âm thanh cao cấp. Quý khách được chào đón bằng không gian ấm cúng & sang trọng tại hội thảo, buổi đào tạo hoặc để kỷ niệm
-các dịp lễ đặc biệt.
-
-            </p>
-        </div>
-      </div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-album">
+        <ul class="box-list-album">
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img1.jpg">
+              <img src="assets/images/album-img1.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img2.jpg">
+              <img src="assets/images/album-img2.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img3.jpg">
+              <img src="assets/images/album-img3.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img4.jpg">
+              <img src="assets/images/album-img4.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img5.jpg">
+              <img src="assets/images/album-img5.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img6.jpg">
+              <img src="assets/images/album-img6.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img1.jpg">
+              <img src="assets/images/album-img1.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img2.jpg">
+              <img src="assets/images/album-img2.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+          <li class="col-lg-4 col-sm-4 col-xs-4 col-md-4 list-album-item">
+            <a data-fancybox="gallery" href="assets/images/album-img3.jpg">
+              <img src="assets/images/album-img3.jpg" />
+            </a>
+            <div class="content-promotion">
+              <h3>Extra 10% Discount</h3>
+              <span>Dành cho các phòng Executive, SIgnature...</span>
+            </div>
+          </li>
+        </ul>
     </div>
+    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12 pagi-booking">
+        <div class="pagination">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+  </div>
   </div>
 </section>
 <!-- Intro close-->
